--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <aside class="menu-sidebar d-none d-lg-block">
     <div class="logo">
       <a href="#">
-        <img src="assets/images/logo.png" alt="eCommerceWebsite" class="img-responsive">
+        <!-- <img src="assets/images/logo.png" alt="eCommerceWebsite" class="img-responsive"> -->
       </a>
     </div>
     
@@ -23,12 +23,9 @@
 
             <app-search></app-search>
             
-            <div class="cart-area d-n">
-              <a href="shopping-detail.html">
-                <div class="total">19.22 <span> 2</span> </div> <i class="fa fa-shopping-cart"
-                  aria-hidden="true"></i>
-              </a>
-            </div>
+
+            <app-cart-status></app-cart-status>
+            
           </div>
           <div class="account-wrap"></div>
         </div>
