added login, checkout form validation, save order to database, protected routes, and item persitency on browser refresh

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <aside class="menu-sidebar d-none d-lg-block">
     <div class="logo">
       <a routerLink="/products">
-        <!-- <img src="assets/images/logo.png" alt="eCommerceWebsite" class="img-responsive"> -->
+        <img src="assets/images/logo.png" alt="eCommerceWebsite" class="img-responsive">
       </a>
     </div>
     
@@ -23,7 +23,8 @@
 
             <app-search></app-search>
             
-
+            <app-login-status></app-login-status>
+            
             <app-cart-status></app-cart-status>
             
           </div>
